<resources>
    <string name="app_name">DevIntensive</string>
    <string name="rating_string">Рейтинг</string>
    <string name="line_code_text">Написано строк кода</string>
    <string name="project_text">Проектов</string>
    <string name="mobile_phone_text">Мобильный телефон</string>
    <string name="mobile_number">89826574525</string>
    <string name="email_text">Email</string>
    <string name="email">myMail</string>
    <string name="vk_href_text">Профиль в VK - id</string>
    <string name="vk_href">vk.com/progerega</string>
    <string name="reposity_text">Репозиторий</string>
    <string name="repository">https://github.com/Eganin</string>
    <string name="peron_info_text">О себе</string>
    <string name="text_person">"Lorem ipsum dolor sit amet, consectetur adipiscing elit,\n
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,\n
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis\n
        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla\n
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia\n
        deserunt mollit anim id est laborum."</string>
    <string name="my_profile_menu_text">Мой профиль</string>
    <string name="team_menu_text">Команда</string>
    <string name="name">Егор Захарин</string>
    <string name="test_email">egorzaharin12@gmail.com</string>
    <string name="restart_user_photo_text">Изменить фотографию в профиле</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать фото</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="dialog.title">Изменить фотографию пользователя</string>
    <string name="choice_photo_from_gallery">Выберите фото</string>
    <string name="sigin_in_text">Войти</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_password">Пароль</string>
    <string name="sign_in_text">Войти</string>
    <string name="recycler_password_text">Забыли пароль?</string>
    <string name="permission_call_text">Для того чтобы позвонить требуется предоставить разрешения</string>
    <string name="permission_photo_text">Для необходимой работы приложения необходимо дать требуемые разрешения</string>
    <string name="access_permission">Разрешить</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>