<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_walapper"
    android:theme="@style/AppTheme.NoActionBar">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_anchor="@id/cardView"
        app:layout_anchorGravity="center|right" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="260dp"
        android:layout_height="400dp"
        android:layout_centerInParent="true"
        android:background="@color/white_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginTop="@dimen/spacing_medium_32"
                android:text="@string/sigin_in_text"
                android:textColor="@color/orange"
                android:textSize="@dimen/size_middle_30" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium_32">

                <EditText
                    android:id="@+id/signInEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_medium_32"
                    android:enabled="true"
                    android:focusable="true"
                    android:hint="@string/sign_in_email"
                    android:inputType="phone"
                    android:text="@string/sign_in_email"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal_16">

                <EditText
                    android:id="@+id/signInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium_32"
                    android:layout_marginRight="@dimen/spacing_medium_32"
                    android:enabled="true"
                    android:focusable="true"
                    android:hint="@string/sign_in_password"
                    android:inputType="phone"
                    android:text="@string/sign_in_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium_32"
                android:background="@color/orange"
                android:text="@string/sign_in_text"
                android:textColor="@color/white_text"
                android:textSize="@dimen/spacing_normal_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:text="@string/recycler_password_text"
                android:textColor="@color/gray_background"
                android:textSize="@dimen/spacing_normal_16" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>